--- a/package.json
+++ b/package.json
@@ -1,17 +1,46 @@
 {
 	"name": "react-input-submit",
 	"version": "0.1.0",
-	"main": "index.js",
-	"devDependencies": {
-		"react": "^16.0.0",
-		"react-dom": "^16.0.0",
-		"react-scripts": "1.0.14"
-	},
+	"main": "lib/index.js",
+	"files": [
+		"lib"
+	],
+	"description": "Simple input component with a submit button",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
+		"start": "npm run storybook",
+		"build": "rimraf lib && babel src --out-dir lib --ignore test.js --copy-files",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook",
+		"publish": "np"
+	},
+	"devDependencies": {
+		"@storybook/addon-actions": "^3.2.13",
+		"@storybook/react": "^3.2.13",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^8.0.1",
+		"babel-jest": "^21.2.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"enzyme": "^3.1.0",
+		"eslint": "^4.9.0",
+		"eslint-config-react-app": "^2.0.1",
+		"eslint-plugin-flowtype": "^2.39.1",
+		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-jsx-a11y": "^6.0.2",
+		"eslint-plugin-react": "^7.4.0",
+		"jest": "^21.2.1",
+		"np": "^2.16.0",
+		"prop-types": "^15.6.0",
+		"react": "^16.0.0",
+		"react-addons-test-utils": "^15.6.2",
+		"react-dev-utils": "^4.1.0",
+		"react-dom": "^16.0.0",
+		"rimraf": "^2.6.2",
+		"styled-components": "^2.2.1"
 	},
 	"repository": {
 		"type": "git",
