--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.4.0",
 		"np": "^2.16.0",
-		"prop-types": "^15.6.0",
 		"react": "^16.0.0",
 		"react-addons-test-utils": "^15.6.2",
 		"react-dev-utils": "^4.1.0",
 		"react-dom": "^16.0.0",
-		"rimraf": "^2.6.2",
-		"styled-components": "^2.2.1"
+		"rimraf": "^2.6.2"
 	},
 	"repository": {
 		"type": "git",
@@ -49,5 +47,9 @@
 	"bugs": {
 		"url": "https://github.com/louisgv/react-input-submit/issues"
 	},
-	"homepage": "https://github.com/louisgv/react-input-submit#readme"
+	"homepage": "https://github.com/louisgv/react-input-submit#readme",
+	"dependencies": {
+		"prop-types": "^15.6.0",
+		"styled-components": "^2.2.1"
+	}
 }
