Adding classname for styling

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,4 @@
 {
-  "extends": "react-app",
-  "env": {
-    "browser": true,
-    "node": true
-  }
+  "extends": ["react-app", "plugin:jsx-a11y/recommended"],
+  "plugins": ["jsx-a11y"]
 }
