--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
 	"devDependencies": {
 		"@storybook/addon-actions": "^3.2.13",
 		"@storybook/react": "^3.2.13",
-		"babel-cli": "^6.26.0",
-		"babel-core": "^6.26.0",
-		"babel-eslint": "^8.0.1",
-		"babel-jest": "^21.2.0",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-2": "^6.24.1",
+		"babel-cli": "^7.0.0-beta.3",
+		"babel-core": "^7.0.0-bridge.0",
+		"babel-eslint": "^8.1.2",
+		"babel-jest": "^22.0.4",
+		"babel-preset-env": "^7.0.0-beta.3",
+		"babel-preset-react": "^7.0.0-beta.3",
+		"babel-preset-stage-2": "^7.0.0-beta.3",
 		"enzyme": "^3.1.0",
-		"eslint": "^4.9.0",
+		"eslint": "^4.1.1",
 		"eslint-config-react-app": "^2.0.1",
-		"eslint-plugin-flowtype": "^2.39.1",
-		"eslint-plugin-import": "^2.8.0",
-		"eslint-plugin-jsx-a11y": "^6.0.2",
-		"eslint-plugin-react": "^7.4.0",
+		"eslint-plugin-flowtype": "^2.34.1",
+		"eslint-plugin-import": "^2.6.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.1.0",
 		"np": "^2.16.0",
 		"react": "^16.0.0",
-		"react-addons-test-utils": "^15.6.2",
+		"react-addons-test-utils": "^16.0.0-alpha.3",
 		"react-dev-utils": "^4.1.0",
 		"react-dom": "^16.0.0",
 		"rimraf": "^2.6.2"
@@ -50,6 +50,7 @@
 	"homepage": "https://github.com/louisgv/react-input-submit#readme",
 	"dependencies": {
 		"prop-types": "^15.6.0",
+		"react-router-dom": "^4.2.2",
 		"styled-components": "^2.2.1"
 	}
 }
