--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@storybook/addon-actions": "^3.2.13",
 		"@storybook/react": "^3.2.13",
 		"babel-cli": "^7.0.0-beta.3",
-		"babel-core": "^7.0.0-bridge.0",
+		"babel-core": "^7.0.0-beta.3",
 		"babel-eslint": "^7.2.3",
 		"babel-jest": "^22.0.4",
 		"babel-preset-env": "^7.0.0-beta.3",
@@ -51,6 +51,7 @@
 	"dependencies": {
 		"prop-types": "^15.6.0",
 		"react-router-dom": "^4.2.2",
-		"styled-components": "^2.2.1"
+		"styled-components": "^2.2.1",
+		"styled-theme": "^0.3.3"
 	}
 }
