--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@storybook/addon-actions": "^3.2.13",
 		"@storybook/react": "^3.2.13",
 		"babel-cli": "^7.0.0-beta.3",
-		"babel-core": "^7.0.0-beta.3",
+		"babel-core": "7.0.0-beta.3",
 		"babel-eslint": "^7.2.3",
 		"babel-jest": "^22.0.4",
 		"babel-preset-env": "^7.0.0-beta.3",
